--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,36 @@
-<h2 id="title">Welcome to Ember</h2>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Shopping</a>
+    </div>
 
-{{outlet}}
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        {{#if session.isAuthenticated}}
+            <button
+                class='btn btn-default navbar-btn'
+                {{action 'signOut'}}
+            >
+                {{fa-icon 'sign-out'}} Sign Out
+            </button>
+        {{else}}
+        <li>{{#link-to 'sign-in'}}Sign-in{{/link-to}}</li>
+        <li>{{#link-to 'sign-up' class=""}}Sign-up{{/link-to}}</li>
+        {{/if}}
+      </ul>
+
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+<div class="container">
+  {{outlet}}
+</div>
