user can add individual products from walmart to database when they hit add to cart button

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,3 +3,6 @@ Index Template
 <div class="page-header">
   {{product-search productLookup="productLookup"}}
 </div>
+
+
+{{new-product saveProduct="saveProduct"}}
