--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -1,5 +1,5 @@
 <ul>
-  {{#each model as |product|}}
+  {{#each model.walMart as |product|}}
     <br>
     {{product.name}} -- ${{product.salePrice}}
     <div>
