add header to table

--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -1,5 +1,10 @@
 <ul>
   <table>
+    <th>
+      <td>Item</td>
+      <td>Price</td>
+      <td>Add</td>
+    </th>
     {{#each model.walMart as |product|}}
       <tr>
         <td class="table-data"> {{product.name}} </td>
