--- a/app/templates/components/display-cart.hbs
+++ b/app/templates/components/display-cart.hbs
@@ -6,7 +6,7 @@
     <td class="table-data">${{product.salePrice}}</td>
     <td class="table-data">
       <form>
-        <button {{action 'removeFromCart'}}>Remove form cart</button>
+        <button {{action 'removeFromCart'}}>Remove</button>
       </form>
     </td>
 
