--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -37,5 +37,5 @@
       </tr>
     {{/each}}
   </table>
-  {{display-cart}}
+  {{display-cart  removeFromCart="removeFromCart" product=product}}
 </ul>
