--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Shopping</a>
+      <a class="navbar-brand" href="#">{{#link-to 'index'}}Shopping{{/link-to}}</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
