--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -15,13 +15,14 @@
                 {{input value=product.name id=product.name type="hidden"}}
                 {{input value=product.salePrice id=product.salePrice type="hidden"}}
               <button {{action 'saveProduct' product}}>Add to Cart</button>
+                {{new-discuss model=product newDiscuss="newDiscuss"}}
             </form>
           </div>
         </td>
       </tr>
     {{/each}}
 
-    {{#each model.bestBuy as |product|}}
+    <!-- {{#each model.bestBuy as |product|}}
       <tr>
       <td class="table-data"> {{product.name}} </td>
       <td class="table-data"> ${{product.salePrice}} </td>
@@ -35,7 +36,7 @@
         </div>
       </td>
       </tr>
-    {{/each}}
+    {{/each}} -->
   </table>
   {{display-cart}}
 </ul>
