total product cost functionality

--- a/app/templates/components/display-cart.hbs
+++ b/app/templates/components/display-cart.hbs
@@ -17,6 +17,8 @@
 <br>
 <button {{action 'emptyCart'}} class="btn btn-primary">Empty cart</button>
 <br>
-Total: {{total-price shoppingCart.products}}
+<!-- Total: {{total-price shoppingCart.products}} -->
+Total: {{totalCartCost}}
+
 <br>
 <br>
