--- a/app/templates/components/new-comment.hbs
+++ b/app/templates/components/new-comment.hbs
@@ -1,9 +1,10 @@
 <form>
   <div class="form-group">
-    {{input value=author id="author"}}
+    {{input value=author id="author" placeholder = "author"}}
   </div>
 
   <div class="form-group">
-    {{input value=content id="content"}}
+    {{input value=content id="content" placeholder = "comment"}}
   </div>
+  <button class = "btn btn-success"{{action 'saveComment'}}>Post Comment</button>
 </form>
