--- a/app/templates/product.hbs
+++ b/app/templates/product.hbs
@@ -1,3 +1,12 @@
 <h1>Individual product discussion page</h1>
 
-{{model.product}}
+<li>{{model.product}}</li>
+<li>{{model.price}}</li>
+<hr />
+{{new-comment discuss=model saveComment="saveComment"}}
+
+{{#each model.comments as |comment|}}
+<p>Comment: {{comment.content}}</p>
+<p>Author: {{comment.author}}</p>
+<hr />
+{{/each}}
