--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -1,41 +1,42 @@
 <ul>
-  <table>
-    <th>
-      <td>Item</td>
-      <td>Price</td>
-      <td>Add</td>
-    </th>
-    {{#each model.walMart as |product|}}
-      <tr>
-        <td class="table-data">{{#link-to 'product' product_id}}{{product.name}}{{/link-to}}</td>
-        <td class="table-data"> ${{product.salePrice}} </td>
-        <td class="table-data">
-          <div>
-            <form>
-                {{input value=product.name id=product.name type="hidden"}}
-                {{input value=product.salePrice id=product.salePrice type="hidden"}}
-              <button {{action 'saveProduct' product}}>Add to Cart</button>
-            </form>
+    <div class="product-container">
+      {{#each model.walMart as |product|}}
+        <div class="product-box">
+          <div class="img-wrap">
+            <img src={{product.imageEntities.[0].thumbnailImage}}>
           </div>
-        </td>
-      </tr>
-    {{/each}}
-
-    {{#each model.bestBuy as |product|}}
-      <tr>
-      <td class="table-data"> {{product.name}} </td>
-      <td class="table-data"> ${{product.salePrice}} </td>
-      <td class="table-data">
-        <div>
-          <form>
-              {{input value=product.name id=product.name type="hidden"}}
-              {{input value=product.salePrice id=product.salePrice type="hidden"}}
-            <button {{action 'saveProduct' product}}>Add to Cart</button>
-          </form>
+          <div class="product-store">
+            <em>Walmart</em>
+          </div>
+          <div class="product-name">
+            {{product.name}}
+          </div>
+          <div class="product-sale-price">
+            ${{product.salePrice}}
+          </div>
+          <div class="product-likes-and-comments">
+            <div class="product-likes">
+              <div class="thumbs-up-and-down">
+                <div class="thumbs-up-wrap">
+                  <i class="fa fa-thumbs-up" aria-hidden="true" style="font-size:18px;"></i>
+                </div>
+                <div class="thumbs-down-wrap">
+                  <i class="fa fa-thumbs-down" aria-hidden="true" style="font-size:18px;"></i>
+                </div>
+              </div>
+            </div>
+            <div class="product-comments">
+              <i class="fa fa-comment" aria-hidden="true" style="font-size:18px;"></i>
+            </div>
+          </div>
         </div>
-      </td>
-      </tr>
-    {{/each}}
-  </table>
+      {{/each}}
+
+      {{#each model.bestBuy as |product|}}
+      <div class="product-box">
+        <img src={{product.thumbnailImage}}>
+      </div>
+      {{/each}}
+    </div>
   {{display-cart}}
 </ul>
