--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,27 +1,26 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">{{#link-to 'index'}}Shopping{{/link-to}}</a>
-    </div>
+<div class="container-fluid">
+    <nav class="navbar navbar-default">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">{{#link-to 'index'}}Shopping{{/link-to}}</a>
+      </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        {{#if session.isAuthenticated}}
-            <button
-                class='btn btn-default navbar-btn'
-                {{action 'signOut'}}
-            >
-                {{fa-icon 'sign-out'}} Sign Out
-            </button>
-            <li><div class="cart-wrap">{{#link-to 'cart'}}<i class="fa fa-shopping-cart"></i><span class="shopping-cart-length">{{shoppingCart.products.length}}</span>{{/link-to}}</div></li>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          {{#if session.isAuthenticated}}
+          <button
+          class='btn btn-default navbar-btn'
+          {{action 'signOut'}}
+          >
+          {{fa-icon 'sign-out'}} Sign Out
+        </button>
+        <li><div class="cart-wrap">{{#link-to 'cart'}}<i class="fa fa-shopping-cart"></i><span class="shopping-cart-length">{{shoppingCart.products.length}}</span>{{/link-to}}</div></li>
         {{else}}
         <li>{{#link-to 'sign-in'}}Sign-in{{/link-to}}</li>
         <li>{{#link-to 'sign-up' class=""}}Sign-up{{/link-to}}</li>
@@ -29,9 +28,24 @@
       </ul>
 
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+  </nav>
+  <div class="container-fluid main">
+    <div class="sidebar-left">
+      Sidebar Left
+    </div>
 
-<div class="container">
-  {{outlet}}
+
+    <div class="content">
+
+      <div class="outlet">
+      {{outlet}}
+      </div>
+
+
+      <div class="sidebar-right">
+        Sidebar Right
+      </div>
+
+    </div>
+  </div>
 </div>
