--- a/app/templates/product.hbs
+++ b/app/templates/product.hbs
@@ -8,5 +8,7 @@
 {{#each model.comments as |comment|}}
 <p>Comment: {{comment.content}}</p>
 <p>Author: {{comment.author}}</p>
+<!-- <p>Pic: {{userImage}}</p> -->
+
 <hr />
 {{/each}}
