add update to discuss, discuss route

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -8,7 +8,7 @@ Index Template
 <ul>
 {{#each model as |discussion|}}
 <div class = "discussion">
-<li>{{#link-to 'product' discussion}}{{discussion.product}}{{/link-to}}</li>
+<li>{{#link-to 'discuss' discussion}}{{discussion.product}}{{/link-to}}</li>
 </div>
 {{/each}}
 </ul>
