--- a/app/templates/product.hbs
+++ b/app/templates/product.hbs
@@ -1,14 +1,18 @@
-<h1>Individual product discussion page</h1>
+<h1>Start a discusison about this product</h1>
 
 <li>{{model.product}}</li>
 <li>{{model.price}}</li>
 <hr />
-{{new-comment discuss=model saveComment="saveComment"}}
+
+{{update-discussion updateDiscuss="updateDiscuss" discuss=model}}
+
+
+<!-- {{new-comment discuss=model saveComment="saveComment"}}
 
 {{#each model.comments as |comment|}}
 <p>Comment: {{comment.content}}</p>
-<p>Author: {{comment.author}}</p>
+<p>Author: {{comment.author}}</p> -->
 <!-- <p>Pic: {{userImage}}</p> -->
 
-<hr />
-{{/each}}
+<!-- <hr />
+{{/each}} -->
