--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -1,3 +1,5 @@
+{{navbar-api-search}}
+  <div class="container-fluid main">
 <div class="sidebar-left">
   <div class="filter-widget">
     <div class="filter-widget-title">
@@ -106,4 +108,5 @@
 </div>
 
 <div class="sidebar-right">
+</div>
 </div>
