--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,1 +1,45 @@
+<div class="container-fluid">
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-wrap" style="display: flex;flex:wrap;">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">{{#link-to 'index'}}<img src="/assets/images/cartmagic_logo.png" class="banner">{{/link-to}}</a>
+
+        </div>
+        <form class="search-form" role="search" style="margin:0 auto;width:30%;">
+          <div class="form-group search-input-wrap" style="position:relative;top:6.25px;">
+            <input type="text" class="form-control api-search-nav" placeholder="Search for product...">
+          </div>
+        </form>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            {{#if session.isAuthenticated}}
+            <button class='btn btn-default navbar-btn'{{action 'signOut'}}>
+              {{fa-icon 'sign-out'}} Sign Out
+            </button>
+            <li><div class="cart-wrap">{{#link-to 'cart'}}<i class="fa fa-shopping-cart"></i><span class="shopping-cart-length">{{shoppingCart.products.length}}</span>{{/link-to}}</div></li>
+            {{else}}
+            <li>{{#link-to 'sign-in'}}SIGN-IN{{/link-to}}</li>
+            <li>{{#link-to 'sign-up' class=""}}SIGN-UP{{/link-to}}</li>
+            {{/if}}
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /navbar-wrap -->
+
+
+    </div><!-- /.container-fluid -->
+  </nav>
+</div>
+
+
 {{outlet}}
