change navbar styling

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -12,7 +12,7 @@
           <a class="navbar-brand" href="#">{{#link-to 'index'}}<img src="/assets/images/cartmagic_logo.png" class="banner">{{/link-to}}</a>
 
         </div>
-        <form class="search-form" role="search" style="margin:0 auto;width:30%;">
+        <form class="search-form" role="search" style="width:300px">
           <div class="form-group search-input-wrap" style="position:relative;top:6.25px;">
             <input type="text" class="form-control api-search-nav" placeholder="Search for product...">
           </div>
