add comment style functionality

--- a/app/templates/components/new-comment.hbs
+++ b/app/templates/components/new-comment.hbs
@@ -1,7 +1,6 @@
 <form>
   <div class="form-group">
-    {{input value=content id="content" placeholder = "comment"}}
+    {{textarea value=content id="content" placeholder = "If you're logged in, feel free to start a discussion here!"}}
   </div>
-  <button class = "btn btn-success"{{action 'saveComment'}}>Post Comment</button>
-  {{userImage}}
+  <button class = "btn btn-success margin"{{action 'saveComment'}}>Post Comment</button>
 </form>
