--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -334,3 +334,52 @@
    background: url('http://bavotasan.com/wp-content/uploads/2011/05/down_arrow_select.jpg') no-repeat right #ddd;
    border: 1px solid #ccc;
    }
+
+  .well {
+    min-height: 20px;
+    padding: 19px;
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+    text-align: center;
+}
+
+.money {
+  color: green;
+}
+.category {
+  font-style: oblique;
+}
+
+#content {
+  height:100px;
+  width: 100%;
+}
+
+.inline {
+  display: inline-flex;
+  font-size: 30px;
+  padding-left: 35%;
+  color: grey;
+    text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
+
+}
+
+.left {
+  float:left;
+}
+
+.fullComment {
+  padding-bottom: 10px;
+}
+
+.margin {
+  margin-bottom: 30px;
+}
