--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -7,8 +7,117 @@
 
 .jumbotron {
   padding: 0px;
-
 }
+
+.cf:before, .cf:after{
+    content:"";
+    display:table;
+}
+
+.cf:after{
+    clear:both;
+}
+
+.cf{
+    zoom:1;
+}
+
+ /* Form wrapper styling */
+.search-wrapper {
+width: 220px;
+margin: 45px auto 50px auto;
+box-shadow: 0 1px 1px rgba(0, 0, 0, .4) inset, 0 1px 0 rgba(255, 255, 255, .2);
+}
+
+/* Form text input */
+
+.search-wrapper input {
+width: 138px;
+height: 40px;
+padding: 10px 5px;
+float: left;
+font: bold 15px 'lucida sans', 'trebuchet MS', 'Tahoma';
+border: 0;
+background: #EEE;
+border-radius: 3px 0 0 3px;
+}
+
+.search-wrapper input:focus {
+    outline: 0;
+    background: #fff;
+    box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
+}
+
+.search-wrapper input::-webkit-input-placeholder {
+   color: #999;
+   font-weight: normal;
+   font-style: italic;
+}
+
+.search-wrapper input:-moz-placeholder {
+    color: #999;
+    font-weight: normal;
+    font-style: italic;
+}
+
+.search-wrapper input:-ms-input-placeholder {
+    color: #999;
+    font-weight: normal;
+    font-style: italic;
+}
+
+/* Form submit button */
+.search-wrapper button {
+overflow: visible;
+position: relative;
+float: right;
+border: 0;
+padding: 0;
+cursor: pointer;
+height: 40px;
+width: 72px;
+font: bold 15px/40px 'lucida sans', 'trebuchet MS', 'Tahoma';
+color: white;
+text-transform: uppercase;
+background: #D83C3C;
+border-radius: 0 3px 3px 0;
+text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
+}
+
+.search-wrapper button:hover{
+    background: #e54040;
+}
+
+.search-wrapper button:active,
+.search-wrapper button:focus{
+    background: #c42f2f;
+    outline: 0;
+}
+
+.search-wrapper button:before { /* left arrow */
+    content: '';
+    position: absolute;
+    border-width: 8px 8px 8px 0;
+    border-style: solid solid solid none;
+    border-color: transparent #d83c3c transparent;
+    top: 12px;
+    left: -6px;
+}
+
+.search-wrapper button:hover:before{
+    border-right-color: #e54040;
+}
+
+.search-wrapper button:focus:before,
+.search-wrapper button:active:before{
+        border-right-color: #c42f2f;
+}
+
+.search-wrapper button::-moz-focus-inner { /* remove extra button spacing for Mozilla Firefox */
+    border: 0;
+    padding: 0;
+}
+
 
 
 
@@ -28,10 +137,70 @@
   opacity: .5;
 }
 
+#second-column-header {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.hp-form {
+  text-align:center;
+  }
+.home-search-btn:hover {
+  background:#00AEEE;
+  border:none;
+  transition: .5s;
+}
+
+.h2-row-2 {
+  margin: 0 auto;
+}
+
+.index-row {
+  margin-left:25px;
+  margin-right:25px;
+}
+
+.index-row-2 {
+  text-align:center;
+}
+
+.above-search-bar-index, .above-search-bar-index-2 {
+  margin-left:3px;
+  font-family:'ProximaNovaLight', sans-serif;
+  color: #40576F;
+  font-size:18pt;
+  font-weight:300;
+
+}
+
+.above-search-bar-index {
+    float:left;
+}
+.home-search-btn {
+  float:left;
+  background:#00BAFF;
+  padding: 6px 6px;
+  width:150px;
+  border: 1px solid #fff;
+  border-radius:15px;
+}
+
+.hp-v5-form {
+  border: 1px solid #E4E9F0;
+  border-radius:10px;
+  width:300px;
+}
+
+.index-search-bar {
+  border-radius:10px;
+}
+
 .jumbotron {
   padding:0px !important;
-  background: url("https://media.gucci.com/content/CategoryHeroHeaderStandard_1600x533/1447248605/CategoryHeroHeaderStandard_s61-gift-children_001_Default.jpg");
+  background: #F9F9F9;
   text-align: center;
+  height:500px;
 }
 
 .product-search-wrap {
