--- a/app/templates/components/product-search.hbs
+++ b/app/templates/components/product-search.hbs
@@ -1,9 +1,11 @@
 
 
-<form>
+<form class="hp-form">
   <div class="form-group">
-    {{input value=product id="product"}}
+    <div class="hp-v5-form home" id="home-sign-up">
+    {{input value=product id="product" class="form-control" placeholder="Search nirvana awaits..." type="text"}}
   </div>
+</div>
 
-  <button class="btn btn-primary" {{action 'productLookup'}}>Submit</button>
+  <button class="btn btn-primary home-search-btn" {{action 'productLookup'}}>Submit</button>
 </form>
