add to cart functionality

--- a/app/templates/components/sorted-products.hbs
+++ b/app/templates/components/sorted-products.hbs
@@ -18,12 +18,10 @@
     <div class="product-likes-and-comments">
       <div class="product-likes">
         <div class="thumbs-up-and-down">
-          <div class="thumbs-up-wrap">
-            <i class="fa fa-thumbs-up" aria-hidden="true" style="font-size:18px;"></i>
-          </div>
-          <div class="thumbs-down-wrap">
+            <i {{action "saveProduct" product}}class="fa fa-cart-plus" aria-hidden="true" style="font-size:24px;"></i>
+          <!-- <div class="thumbs-down-wrap">
             <i class="fa fa-thumbs-down" aria-hidden="true" style="font-size:18px;"></i>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="product-comments">
