--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -333,6 +333,12 @@ text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
 .img-wrap {
   text-align:center;
   margin-bottom:10px;
+
+}
+
+.img-wrap img{
+  width: 80px;
+  height: 80px;
 }
 
 .product-store {
