--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -17,7 +17,7 @@
         <ul class="nav navbar-nav">
           <form class="search-form navbar-left" role="search" style="width:200px">
             <div class="form-group search-input-wrap" style="position:relative;top:2.5px;">
-              <input type="text" class="form-control api-search-nav" placeholder="Search for product...">
+              {{nav-search navLookup="navLookup"}}
             </div>
           </form>
           <li class=""><a href="#">HOT DEALS <span class="sr-only">(current)</span></a></li>
