--- a/app/templates/components/product-search.hbs
+++ b/app/templates/components/product-search.hbs
@@ -3,7 +3,7 @@
 <form class="hp-form">
   <div class="form-group">
     <div class="hp-v5-form home" id="home-sign-up">
-    {{input value=product id="product" class="form-control" placeholder="Search nirvana awaits..." type="text"}}
+    {{input value=product2 id="product2" class="form-control" placeholder="Search nirvana awaits..." type="text"}}
   </div>
 </div>
 
