--- a/app/templates/components/nav-search.hbs
+++ b/app/templates/components/nav-search.hbs
@@ -1,9 +1,9 @@
 <form class="hp-form">
   <div class="form-group float">
     <div  id="nav-sign-up">
-    {{input value=product id="product" class="form-control" placeholder="Search..." type="text"}}
+    {{input value=product id="product" class="form-control api-search-nav" placeholder="Search..." type="text"}}
   </div>
 </div>
 
-  <button class="btn btn-primary" {{action 'navLookup'}}>Submit</button>
+  <button class="btn btn-primary" style="display:none;" {{action 'navLookup'}}>Submit</button>
 </form>
